[project]
authors = [{name = "AmadFat", email = "1943269060@qq.com"}]
name = "nnaf-logger"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "colorama>=0.4.6",
    "nnaf==0.1.0",
    "rich",
    "structlog>=25.3.0",
    "tabulate>=0.9.0",
    # "wandb-workspaces>=0.1.14",
    # "torch",
    # "torchvision",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "wandb>=0.19.11",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

# [[tool.uv.index]]
# url = "http://pypi.tuna.tsinghua.edu.cn/simple"
# default = true

[tool.uv.sources]
nnaf = { git = "https://kkgithub.com/AmadFat/NNAF.git" }

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
# torch = { url = "https://download.pytorch.org/whl/cpu" }
# torchvision = { url = "https://download.pytorch.org/whl/cpu" }
