[project]
authors = [{name = "AmadFat", email = "1943269060@qq.com"}]
name = "nnaf-logger"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "colorama>=0.4.6",
    "nnaf-utils==0.1.0",
    "rich>=14.0.0",
    "structlog>=25.3.0",
    "tabulate>=0.9.0",
    "wandb>=0.19.11",
    "xxhash>=3.5.0",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.uv.sources]
nnaf-utils = { git = "https://github.com/AmadFat/nnaf-utils" }

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "I",
    "SIM",
    "D"
]
ignore = [
    "D100",
    "D102",
    "F401",
    "F403",
    "F405",
]
